<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/space"
              android:weightSum="10">
        <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"/>

        <TextView
                android:text="@string/about_me_header"
                android:layout_weight=".8"
                android:layout_gravity="center"
                android:layout_height="0dp"
                android:textSize="20dp"
                android:layout_width="wrap_content"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"/>

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:background="@drawable/snow"
                android:layout_weight="6"
                android:contentDescription="@string/about_me_pic_description"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                />
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:textSize="20dp"
                android:text="@string/about_me_text_one"
                android:layout_marginLeft="30dp"
                android:layout_weight=".2"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:textSize="23dp"
                android:layout_marginLeft="30dp"
                android:text="@string/about_me_text_two"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:textSize="20dp"
                android:text="@string/about_me_text_three"
                android:layout_marginLeft="30dp"
                android:layout_weight=".3"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:textSize="23dp"
                android:layout_marginLeft="30dp"
                android:text="@string/about_me_text_four"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_weight=".7"/>


</LinearLayout>