<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:weightSum="10.0" android:background="@drawable/space_bl">
    <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:layout_weight=".3"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/main_menu_header_textA"
            android:id="@+id/textView"
            android:singleLine="false"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:text="@string/main_menu_header_textB"
            android:id="@+id/textView"
            android:singleLine="false"
            android:textSize="35dp"
            android:gravity="center"
            android:layout_weight="1"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight=".7"
            />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_button_one"
            android:id="@+id/button1" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="30dp" android:paddingRight="33dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1.5"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:layout_weight=".5"
            />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_button_two"
            android:id="@+id/button2" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="30dp" android:paddingRight="30dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1.5"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:layout_weight=".5"
            />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_button_three"
            android:id="@+id/button3" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="38dp" android:paddingRight="38dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1.5"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_weight=".5"/>
    <ImageButton
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:id="@+id/imageButton"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/info"
            android:layout_marginRight="10dp"
            android:layout_weight=".9"
            android:contentDescription="@string/info_button"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_weight=".6"/>

</LinearLayout>