<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/space_bl"
              android:layout_weight="12.0">
    <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"/>
    <TextView
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:text="@string/image_menu_header_text"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_weight="1"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_menu_button_one"
            android:id="@+id/button1a" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_menu_button_two"
            android:id="@+id/button2a" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_menu_button_three"
            android:id="@+id/button3a" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_menu_button_four"
            android:id="@+id/button4a" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_menu_button_five"
            android:id="@+id/button5a" android:layout_gravity="center" android:background="#ffffff"
            android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="0dp"
            android:paddingBottom="0dp" android:singleLine="false"
            android:textSize="25dp" android:clickable="true"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

</LinearLayout>